--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
       <div id="chatContainer" class="hidden">
         <button id="newSessionButton" class="bg-red-500 text-white px-4 py-2 rounded w-1/2 mb-4 rounded hover:bg-red-600 transition-colors hidden">New Session</button>
         <button id="randomChatButton" class="bg-purple-500 text-white px-4 py-2 rounded w-1/2 mb-4 hover:bg-purple-600 transition-colors">Random Chat</button>
+        <button id="joinRandomChatButton" class="bg-yellow-500 text-white px-4 py-2 rounded w-1/2 mb-4 hover:bg-yellow-600 transition-colors">Join Random Chat</button>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded"></div>
         <div class="input-container hidden">
           <textarea id="messageInput" placeholder="Type a message..." cols="30" maxlength="1000"></textarea>
@@ -281,6 +282,7 @@
     const chatContainer = document.getElementById('chatContainer');
     const newSessionButton = document.getElementById('newSessionButton');
     const randomChatButton = document.getElementById('randomChatButton');
+    const joinRandomChatButton = document.getElementById('joinRandomChatButton');
     const maxClientsContainer = document.getElementById('maxClientsContainer');
     const inputContainer = document.querySelector('.input-container');
     const messages = document.getElementById('messages');
@@ -357,6 +359,7 @@
             chatContainer.classList.add('hidden');
             newSessionButton.classList.add('hidden');
             randomChatButton.classList.add('hidden');
+            joinRandomChatButton.classList.add('hidden');
             maxClientsContainer.classList.add('hidden');
             inputContainer.classList.add('hidden');
             messages.classList.remove('waiting');
@@ -617,6 +620,7 @@
         chatContainer.classList.remove('hidden');
         newSessionButton.classList.remove('hidden');
         randomChatButton.classList.remove('hidden');
+        joinRandomChatButton.classList.remove('hidden');
         inputContainer.classList.remove('hidden');
         messages.classList.remove('waiting');
         clearTimeout(connectionTimeouts.get(targetId));
@@ -942,6 +946,7 @@
       codeDisplayElement.classList.add('hidden');
       copyCodeButton.classList.add('hidden');
       randomChatButton.classList.add('hidden');
+      joinRandomChatButton.classList.add('hidden');
       statusElement.textContent = 'Start a new chat or connect to an existing one';
       document.getElementById('messages').innerHTML = '';
       document.getElementById('messageInput').value = '';
@@ -965,6 +970,14 @@
         alert('Your chat code has been submitted for random matching!');
       } else {
         alert('Cannot submit code: not connected or no code available.');
+      }
+    };
+
+    document.getElementById('joinRandomChatButton').onclick = () => {
+      if (code) {
+        window.location.href = `random.html?myCode=${encodeURIComponent(code)}`;
+      } else {
+        alert('Please start or join a chat first to access random chat selection.');
       }
     };
 
