--- a/index.html
+++ b/index.html
@@ -176,41 +176,35 @@
       margin-top: 0.5rem;
       margin-bottom: 0.5rem;
       cursor: pointer;
-      width: 50%;
+      width: auto;
     }
     #copyCodeButton:hover {
       background-color: #059669;
     }
-    .preview-container {
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 200px;
-      padding: 10px;
-      background-color: #fff;
-      border-left: 1px solid #ccc;
-      border-bottom: 1px solid #ccc;
-      border-radius: 0 0 0 10px;
-      box-shadow: -2px 2px 4px rgba(0, 0, 0, 0.1);
-      z-index: 200;
-      display: block !important; /* Force visibility for debugging */
+    .action-buttons {
+      display: flex;
+      flex-direction: row;
+      gap: 0.5rem;
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
     }
-    .preview-container button {
-      display: block;
-      width: 100%;
-      margin-bottom: 10px;
-      padding: 5px;
-      border: none;
-      border-radius: 5px;
+    .action-buttons button {
+      background-color: #10b981;
+      color: white;
+      padding: 0.35rem 0.9rem;
+      border-radius: 0.375rem;
       cursor: pointer;
+      width: auto;
     }
-    .preview-container .hidden {
-      display: none;
+    .action-buttons button:hover {
+      background-color: #059669;
     }
     @media (max-width: 640px) {
-      .preview-container {
-        width: 150px;
-        right: 10px;
+      .action-buttons {
+        flex-direction: column;
+      }
+      .action-buttons button {
+        width: 100%;
       }
     }
   </style>
@@ -232,6 +226,7 @@
       </div>
       <div id="codeDisplay" class="text-center mb-4 font-mono text-lg text-gray-800 hidden"></div>
       <button id="copyCodeButton" class="hidden">Copy Code</button>
+      <div id="actionButtons" class="action-buttons hidden"></div>
       <div id="chatContainer" class="hidden">
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded"></div>
         <div class="input-container hidden">
@@ -252,11 +247,6 @@
     <div id="maxClientsContainer" class="hidden ml-4 flex flex-col justify-center bg-gray-800 p-4 rounded-lg shadow-lg">
       <span class="text-white mb-2 font-bold">Max<br>Users:</span>
       <div id="maxClientsRadios" class="flex flex-col space-y-2"></div>
-    </div>
-    <div id="previewContainer" class="preview-container hidden">
-      <button id="newSessionButton" class="bg-red-500 text-white hover:bg-red-600 transition-colors">New Session</button>
-      <button id="randomChatButton" class="bg-purple-500 text-white hover:bg-purple-600 transition-colors">Random Chat</button>
-      <button id="joinRandomChatButton" class="bg-yellow-500 text-white hover:bg-yellow-600 transition-colors">Join Random Chat</button>
     </div>
   </div>
   <script>
@@ -313,14 +303,11 @@
     const usernameContainer = document.getElementById('usernameContainer');
     const connectContainer = document.getElementById('connectContainer');
     const chatContainer = document.getElementById('chatContainer');
-    const newSessionButton = document.getElementById('newSessionButton');
-    const randomChatButton = document.getElementById('randomChatButton');
-    const joinRandomChatButton = document.getElementById('joinRandomChatButton');
     const maxClientsContainer = document.getElementById('maxClientsContainer');
-    const previewContainer = document.getElementById('previewContainer');
     const inputContainer = document.querySelector('.input-container');
     const messages = document.getElementById('messages');
     const cornerLogo = document.getElementById('cornerLogo');
+    const actionButtons = document.getElementById('actionButtons');
     statusElement.textContent = 'Start a new chat or connect to an existing one';
     document.getElementById('usernameInput').value = username;
     document.getElementById('usernameConnectInput').value = username;
@@ -389,8 +376,8 @@
             connectContainer.classList.add('hidden');
             codeDisplayElement.classList.add('hidden');
             copyCodeButton.classList.add('hidden');
+            actionButtons.classList.add('hidden');
             chatContainer.classList.add('hidden');
-            previewContainer.classList.add('hidden');
             maxClientsContainer.classList.add('hidden');
             inputContainer.classList.add('hidden');
             messages.classList.remove('waiting');
@@ -647,8 +634,6 @@
         usernameContainer.classList.add('hidden');
         connectContainer.classList.add('hidden');
         chatContainer.classList.remove('hidden');
-        previewContainer.classList.remove('hidden'); // Ensure preview appears
-        console.log('Preview container shown');
         maxClientsContainer.classList.remove('hidden');
         inputContainer.classList.remove('hidden');
         messages.classList.remove('waiting');
@@ -822,8 +807,6 @@
       if (!isConnected) {
         inputContainer.classList.add('hidden');
         messages.classList.add('waiting');
-        previewContainer.classList.add('hidden'); // Hide preview when disconnected
-        console.log('Preview container hidden');
       }
     }
 
@@ -874,12 +857,16 @@
       codeDisplayElement.textContent = `Your code: ${code}`;
       codeDisplayElement.classList.remove('hidden');
       copyCodeButton.classList.remove('hidden');
+      actionButtons.innerHTML = `
+        <button id="copyCodeButton">Copy Code</button>
+        <button id="sendRandomButton">Send to Random Room</button>
+        <button id="joinRandomButton">Join Random Chat</button>
+      `;
+      actionButtons.classList.remove('hidden');
       usernameContainer.classList.add('hidden');
       connectContainer.classList.add('hidden');
       initialContainer.classList.add('hidden');
       chatContainer.classList.remove('hidden');
-      previewContainer.classList.remove('hidden'); // Ensure preview appears
-      console.log('Preview container shown after start');
       maxClientsContainer.classList.remove('hidden');
       inputContainer.classList.remove('hidden');
       messages.classList.add('waiting');
@@ -913,12 +900,16 @@
       codeDisplayElement.textContent = `Using code: ${code}`;
       codeDisplayElement.classList.remove('hidden');
       copyCodeButton.classList.remove('hidden');
+      actionButtons.innerHTML = `
+        <button id="copyCodeButton">Copy Code</button>
+        <button id="sendRandomButton">Send to Random Room</button>
+        <button id="joinRandomButton">Join Random Chat</button>
+      `;
+      actionButtons.classList.remove('hidden');
       initialContainer.classList.add('hidden');
       usernameContainer.classList.add('hidden');
       connectContainer.classList.add('hidden');
       chatContainer.classList.remove('hidden');
-      previewContainer.classList.remove('hidden'); // Ensure preview appears
-      console.log('Preview container shown after connect');
       maxClientsContainer.classList.remove('hidden');
       inputContainer.classList.remove('hidden');
       messages.classList.add('waiting');
@@ -942,8 +933,10 @@
       messages.classList.remove('waiting');
       codeDisplayElement.classList.add('hidden');
       copyCodeButton.classList.add('hidden');
-      previewContainer.classList.add('hidden'); // Hide preview on back
-      console.log('Preview container hidden on back');
+      actionButtons.classList.add('hidden');
+      chatContainer.classList.add('hidden');
+      maxClientsContainer.classList.add('hidden');
+      inputContainer.classList.add('hidden');
     };
 
     document.getElementById('backButtonConnect').onclick = () => {
@@ -953,8 +946,10 @@
       messages.classList.remove('waiting');
       codeDisplayElement.classList.add('hidden');
       copyCodeButton.classList.add('hidden');
-      previewContainer.classList.add('hidden'); // Hide preview on back
-      console.log('Preview container hidden on back');
+      actionButtons.classList.add('hidden');
+      chatContainer.classList.add('hidden');
+      maxClientsContainer.classList.add('hidden');
+      inputContainer.classList.add('hidden');
     };
 
     document.getElementById('sendButton').onclick = () => {
@@ -980,62 +975,34 @@
       }
     });
 
-    document.getElementById('newSessionButton').onclick = () => {
-      socket.send(JSON.stringify({ type: 'leave', code, clientId }));
-      peerConnections.forEach((pc) => pc.close());
-      dataChannels.forEach((dc) => dc.close());
-      peerConnections.clear();
-      dataChannels.clear();
-      candidatesQueues.clear();
-      connectionTimeouts.forEach((timeout) => clearTimeout(timeout));
-      connectionTimeouts.clear();
-      retryCounts.clear();
-      processedMessageIds.clear();
-      processedAnswers.clear();
-      usernames.clear();
-      messageRateLimits.clear();
-      isConnected = false;
-      isInitiator = false;
-      maxClients = 2;
-      totalClients = 0;
-      code = generateCode();
-      codeDisplayElement.textContent = '';
-      codeDisplayElement.classList.add('hidden');
-      copyCodeButton.classList.add('hidden');
-      previewContainer.classList.add('hidden'); // Hide preview on new session
-      console.log('Preview container hidden on new session');
-      statusElement.textContent = 'Start a new chat or connect to an existing one';
-      document.getElementById('messages').innerHTML = '';
-      document.getElementById('messageInput').value = '';
-      document.getElementById('messageInput').style.height = '2.5rem';
-      document.getElementById('usernameInput').value = username;
-      document.getElementById('usernameConnectInput').value = username;
-      document.getElementById('codeInput').value = '';
-      initialContainer.classList.remove('hidden');
-      usernameContainer.classList.add('hidden');
-      connectContainer.classList.add('hidden');
-      chatContainer.classList.add('hidden');
-      maxClientsContainer.classList.add('hidden');
-      inputContainer.classList.add('hidden');
-      messages.classList.remove('waiting');
-    };
-
-    document.getElementById('randomChatButton').onclick = () => {
-      if (code && socket.readyState === WebSocket.OPEN) {
-        socket.send(JSON.stringify({ type: 'submit-random', code, clientId }));
-        alert('Your chat code has been submitted for random matching!');
-      } else {
-        alert('Cannot submit code: not connected or no code available.');
+    document.addEventListener('click', (event) => {
+      if (event.target.id === 'copyCodeButton') {
+        const codeText = codeDisplayElement.textContent.replace('Your code: ', '').replace('Using code: ', '');
+        navigator.clipboard.writeText(codeText).then(() => {
+          event.target.textContent = 'Copied!';
+          setTimeout(() => {
+            event.target.textContent = 'Copy Code';
+          }, 2000);
+        }).catch(err => {
+          console.error('Failed to copy text: ', err);
+        });
       }
-    };
-
-    document.getElementById('joinRandomChatButton').onclick = () => {
-      if (code) {
-        window.location.href = `random.html?myCode=${encodeURIComponent(code)}`;
-      } else {
-        alert('Please start or join a chat first to access random chat selection.');
+      if (event.target.id === 'sendRandomButton') {
+        if (code && socket.readyState === WebSocket.OPEN) {
+          socket.send(JSON.stringify({ type: 'submit-random', code, clientId }));
+          alert('Your chat code has been submitted for random matching!');
+        } else {
+          alert('Cannot submit code: not connected or no code available.');
+        }
       }
-    };
+      if (event.target.id === 'joinRandomButton') {
+        if (code) {
+          window.location.href = `random.html?myCode=${encodeURIComponent(code)}`;
+        } else {
+          alert('Please start or join a chat first to access random chat selection.');
+        }
+      }
+    });
 
     document.getElementById('usernameInput').addEventListener('keydown', (event) => {
       if (event.key === 'Enter') {
@@ -1058,18 +1025,6 @@
       }
     });
 
-    copyCodeButton.onclick = () => {
-      const codeText = codeDisplayElement.textContent.replace('Your code: ', '').replace('Using code: ', '');
-      navigator.clipboard.writeText(codeText).then(() => {
-        copyCodeButton.textContent = 'Copied!';
-        setTimeout(() => {
-          copyCodeButton.textContent = 'Copy Code';
-        }, 2000);
-      }).catch(err => {
-        console.error('Failed to copy text: ', err);
-      });
-    };
-
     window.addEventListener('load', () => {
       console.log('Page loaded');
       const urlParams = new URLSearchParams(window.location.search);
@@ -1079,7 +1034,6 @@
         console.log(`Attempting to connect with code: ${joinCode}`);
         document.getElementById('codeInput').value = joinCode;
         document.getElementById('usernameConnectInput').value = username || '';
-        // Delay to ensure DOM is ready and WebSocket is open
         setTimeout(() => {
           console.log('Triggering connect button click');
           const connectButton = document.getElementById('connectButton');
